# VecSec

./: .gitignore  AGENT_SUMMARY.md  AI_AGENT_GUIDE.md  BASETEN_INTEGRATION.md  CHROMA_CLOUD_SETUP.py  Dockerfile  Dockerfile.redteam  Evil_Agent.py  FINAL_STATUS.txt  Good_Vs_Evil.py  Legitimate_Agent.py  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  REFACTORING_COMPLETE.md  SANDBOX_SETUP.md  SHOWCASE_DEMO.py  SIMPLE_METRICS_VIEWER.py  START_HERE.md  START_HERE.txt  Sec_Agent.py  TASKS.md  TEST_COMMANDS.md  THREAT_DETECTION.md  VECSEC_README.md  agent_example.py  agent_sec.py  ai_agent.py  analytics_dashboard.py  app.py  ares.py  coverage.xml  ddos_config_examples.env  docker-compose.monitoring.yml  llama_attack_generator.py  malicious_inputs_20251025_172524.json  malicious_inputs_20251026_054628.json  malware_bert.py  metrics_exporter.py  my_attacks.json  (+22 more)
.github/: CODEOWNERS  dependabot.yml
Ares/: Ares_rag.py  Ares_rag2.py
chroma_db/: chroma.sqlite3
chroma_db_e2e/: chroma.sqlite3
data/: CHANGES_MADE.txt
docs/: BATCHING_OPTIMIZATION.md  CI_ACCEPTANCE_CRITERIA.md  CODEBASE_ANALYSIS.md  E2E_TEST_RESULTS_TEMPLATE.md  GRADUAL_ROLLOUT_PLAN.md  ISSUES_FOUND.md  MIGRATION_EVIDENCE.md  MIGRATION_REAL_VECTOR_RETRIEVAL.md  MONITORING.md  PERFORMANCE_ISSUES.txt  PERFORMANCE_REPORT_TEMPLATE.md  ROLLBACK_PLAN.md  RUNBOOK.md  TEST_EXPLANATIONS.md  TRAINING_REQUIREMENTS.md  VECTOR_STORE_CONFIG.md
monitoring/: prometheus.yml  vecsec_rules.yml
older stuff/: CONFIGURATION.md  Dockerfile  README.redteam.md  THREAT_ANALYSIS_REPORT.md  advanced_dummy_data.json  adversarial_test_orchestrator.py  agent_config.py  app.py  pyproject.toml  (+14 more)
(+87 files in other folders)
