[project]
name = "flask-proxy"
version = "0.1.0"
description = "A flexible HTTP proxy server built with Flask"
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "flask>=2.3.3",
    "requests>=2.31.0",
    "werkzeug>=2.3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
